# lvim-keyring

./: .gitignore  README.md
doc/: lvim-keyring.txt
lua/lvim-keyring/: commands.lua  config.lua  daemon.lua  health.lua  highlights.lua  import.lua  init.lua  namespaces.lua
lua/lvim-keyring/ui/: init.lua  prompt.lua  rows.lua
native/: Cargo.toml  build.sh  rustfmt.toml
native/src/: credential.rs  crypto.rs  main.rs  rpc.rs  server.rs  totp.rs  vault.rs
